commandlabel.yml
apiVersion: v1
kind: Pod
metadata:
 name: clnginxpod
spec:
 containers:
  - image: nginx
    name: nginxcontainer
    ports:
     - containerPort: 80
