labelfile.yml
apiVersion: v1
kind: Pod
metadata: 
 name: nginxpod
 labels:
  app: google
spec: 
 nodeSelector:
    gpu: "true"
 containers:
  - image: nginx
    name: mynginxcontainer
    ports:
     - containerPort: 80
