namespace.yml
apiVersion: v1
kind: Pod
metadata:
 name: namespacepod
 namespace: myns
 labels:
  app: dev
spec: 
 containers: 
  - image: nginx
    name: mynginxcontainer
    ports:
     - containerPort: 80
