nginxpod.yml
apiVersion: v1
kind: Pod
metadata:
 name: mfnginxpod
spec:
 containers:
  - image: nginx
    name: mynginxcontainer
    ports:
      - containerPort: 80
