nodeportservice.yml
apiVersion: v1
kind: Service
metadata: 
 name: nodeservice
spec:
  type: NodePort
  ports: 
    - port: 80
      targetPort: 80
  selector:
    app: dev
