ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
spec:
  rules:
    - host: tujanena.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myservice
                port: 
                 number: 80

    - host: blabla.com
      http:
        paths: 
          - path: /demo
            pathType: Prefix
            backend:
              service:
                name: myservice
                port:
                 number: 80
